# online-course-completion-mlops-pipeline

./: .gitignore  Makefile  README.md  mlflow.db  project_structure.txt  prometheus.yml  pyproject.toml  requirements.txt  rq.txt
.github/workflows/: ci.yml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: ml_pipeline.py
api/: main.py
src/: model_class.py
src/training/: script.py
tests/: test_api.py
