[project]
name = "ml-main-project"
version = "0.1.0"
description = "Course Completion Prediction Project"
readme = "README.md"
authors = [{ name = "Mohammed-Feroz2245", email = "feroz13143@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.109.0",
    "mlflow>=2.11.0",
    "pandas>=2.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "scikit-learn>=1.4.0",
    "uvicorn>=0.27.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
